ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:                                                                     
  ingressClassName: nginx                                                 
  rules:                                                                  
  - host: myapp.test.example.com                                    
    http:                                                                 
      paths:                                                              
      - path: /
        backend:                                                          
          serviceName: myapp-service                                            
          servicePort: 80
